--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<!------->
 				<div class="project_photo">
 					<p class="project_photo_title">IoT-Based Outdoor Air Quality Monitoring System</p>
-					<div class="img-cover"><img id="project-1-img" src="https://static.pescuela.dev/images/projects/project-1.svg"></div>
+					<div class="img-cover"><img id="project-1-img" src="/img/project-1.svg"></div>
 				</div>
 				<div class="mobile-info-card">
 					Using a Raspberry Pi and low-cost environmental sensors, the system is built to collect outdoor air quality and send the data to the cloud.
@@ -75,7 +75,7 @@
 					<!--------->
 					<div class="project_photo">
 						<p class="project_photo_title">Smart Lamp Powered by Raspberry Pi</p>
-						<div class="img-cover"><img id="project-2-img" src="https://static.pescuela.dev/images/projects/project-3.png"></div>
+						<div class="img-cover"><img id="project-2-img" src="/img/project-3.png"></div>
 					</div>
 					<div class="mobile-info-card">
 						Using a Raspberry Pi, a temperature sensor, and the Google Assistant SDK, the system is able to function as a smart home assistant (and optionally control appliances).
@@ -89,7 +89,7 @@
 					<!--------->
 					<div class="project_photo">
 						<p class="project_photo_title">Voice-Controlled Home Automation</p>
-						<div class="img-cover"><img id="project-3-img" src="https://static.pescuela.dev/images/projects/project-4.png"></div>
+						<div class="img-cover"><img id="project-3-img" src="/img/project-4.png"></div>
 					</div>
 					<div class="mobile-info-card">
 						Using a Raspberry Pi, a temperature sensor, and the Amazon Alexa Voice Service, the system is able to function as a smart home device that is able to control appliances.
@@ -103,7 +103,7 @@
 					<!--------->
 					<div class="project_photo">
 						<p class="project_photo_title">RFID-Based Attendance Monitoring System</p>
-						<div class="img-cover"><img id="project-4-img" src="https://static.pescuela.dev/images/projects/project-2.png"></div>
+						<div class="img-cover"><img id="project-4-img" src="/img/project-2.png"></div>
 					</div>
 					<div class="mobile-info-card">
 						Using a Raspberry Pi, and a low-cost RFID scanner, the system is able to scan RFIDs and store information in a local MySQL server. A website is used to view information. <br>
@@ -118,7 +118,7 @@
 				<h1 class="inner_content_title">Get in touch</h1>
 				<p id="contact-info">I'm not currently looking for new opportunities but my inbox is still open.</p>
 				<div style="text-align: center;"><button class="contact-2" onclick="location.href='mailto:harold@pescuela.dev'" >Say hello <i class="fas fa-envelope"></i></button></div>
-				<a href="https://www.linkedin.com/in/haroldpescuela/"><div id="bottom"><img style="width:100px;vertical-align: middle;" src="https://static.pescuela.dev/images/linkedin.png"/></div></a>
+				<a href="https://www.linkedin.com/in/haroldpescuela/"><div id="bottom"><img style="width:100px;vertical-align: middle;" src="/img/linkedin.png"/></div></a>
 
 			</div>
 		</div>
