--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link id="theme" rel="stylesheet" type="text/css" href="css/style.css" /> 
+	<link rel="stylesheet" href="css/animations.css"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.15.0/inter.min.css" integrity="sha512-LmuBiKMv0sdyc1LQk0LPrsjj3KSoVgVpAXUoFGY8Ye5Zi1mff0it3I42dkh3/NGQgtkqiHcdWOcHGUmOzYLETQ==" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
@@ -20,12 +21,6 @@
 				document.getElementById("theme-switch-icon").className = "fas fa-sun";
 			} 
 		} 
-	</script>
-	<script type="text/javascript">
-		$('#author_name').hide().delay(2500).fadeIn(1000);
-		$('#author_description').hide().delay(2600).fadeIn(1000);
-		$('#panel_2').hide().delay(2800).fadeIn(1000);
-		$('#rest').hide().delay(3000).fadeIn(1000);
 	</script>
 	<style type="text/css">
 		@font-face{
@@ -46,11 +41,11 @@
 		<button class="contact-1" onclick="location.href='mailto:harold@pescuela.dev'" >Say hello <i class="fas fa-envelope"></i></button>
 	</div>
 	<div id="rest" class="inner_content_wrapper">
-		<div class="inner_content">
+		<!--<div class="inner_content">
 			<h1 class="inner_content_title">About Me</h1>
 			<p class="inner_content_paragraphs">
 			I am a graduate of Computer Engineering from University of San Agustin - Iloilo</p>
-		</div>
+		</div>-->
 		<div class="inner_content">
 			<h1 class="inner_content_title">Projects</h1>
 			<div class="project_container">
@@ -117,8 +112,7 @@
 				<a href="https://www.linkedin.com/in/haroldpescuela/"><div id="bottom"><img style="width:100px;vertical-align: middle;" src="/img/linkedin.png"/></div></a>
 
 			</div>
-		</div>
-	</div>			
+		</div>	
 <!--- 14 MARCH 2021 ----- ILOILO CITY, PHILIPPINES ------>
 <!--- data, speaks. ------>
 </body>
