--- a/index.html
+++ b/index.html
@@ -112,7 +112,12 @@
 				<a href="https://www.linkedin.com/in/haroldpescuela/"><div id="bottom"><img style="width:100px;vertical-align: middle;" src="/img/linkedin.png"/></div></a>
 
 			</div>
-		</div>	
+		</div>
+		<script type="text/javascript">
+			window.onbeforeunload = function () {
+  window.scrollTo(0, 0);
+}
+		</script>
 <!--- 14 MARCH 2021 ----- ILOILO CITY, PHILIPPINES ------>
 <!--- data, speaks. ------>
 </body>
