--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<div id="panel">
 		<p id="greet" class="line-1 anim-typewriter">Hello, world! I am </p>
 		<p id="author_name">Harold Pescuela.</p>
+		<p id="course">Computer Engineer</p>
 		<p id="author_description">From programming to integrating it into hardware, I love the processes in between.</p>
 	</div>
 	<div id="panel_2">
