--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link id="theme" rel="stylesheet" type="text/css" href="css/style.css" /> 
 	<link rel="stylesheet" href="css/animations.css"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.15.0/inter.min.css" integrity="sha512-LmuBiKMv0sdyc1LQk0LPrsjj3KSoVgVpAXUoFGY8Ye5Zi1mff0it3I42dkh3/NGQgtkqiHcdWOcHGUmOzYLETQ==" crossorigin="anonymous" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
 	<link rel="icon" type="image/ico" href="/img/pescuela-1.ico">
 	<script> 
@@ -22,13 +23,6 @@
 			} 
 		} 
 	</script>
-	<style type="text/css">
-		@font-face{
-			font-family: SF Mono;
-			src: url(SFMono.ttf);
-			font-weight: 700;
-		}
-	</style>
 </head>
 <body>
 	<div id="theme-switch" onclick="toggleTheme()"><i id="theme-switch-icon" class="fas fa-sun"></i></div>
@@ -116,10 +110,10 @@
 		</div>
 		<script type="text/javascript">
 			window.onbeforeunload = function () {
-  window.scrollTo(0, 0);
-}
+				window.scrollTo(0, 0);
+			}
 		</script>
-<!--- 14 MARCH 2021 ----- ILOILO CITY, PHILIPPINES ------>
-<!--- data, speaks. ------>
-</body>
-</html>
+		<!--- 14 MARCH 2021 ----- ILOILO CITY, PHILIPPINES ------>
+		<!--- data, speaks. ------>
+	</body>
+	</html>
