--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 	<title>Harold Pescuela</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link id="theme" rel="stylesheet" type="text/css" href="css/style.css" /> 
-	<link rel="stylesheet" href="css/animations.css"/>
+	<link id="theme" rel="stylesheet" type="text/css" href="assets/css/style.css" /> 
+	<link rel="stylesheet" href="assets/css/animations.css"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.15.0/inter.min.css" integrity="sha512-LmuBiKMv0sdyc1LQk0LPrsjj3KSoVgVpAXUoFGY8Ye5Zi1mff0it3I42dkh3/NGQgtkqiHcdWOcHGUmOzYLETQ==" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
-	<link rel="icon" type="image/ico" href="/img/pescuela-1.ico">
+	<link rel="icon" type="image/ico" href="assets/img/pescuela-1.ico">
 	<script> 
 		function toggleTheme() {
 			var theme = document.getElementsByTagName('link')[0]; 
-			if (theme.getAttribute('href') == 'css/style.css') { 
-				theme.setAttribute('href', 'css/style-light.css');
+			if (theme.getAttribute('href') == 'assets/css/style.css') { 
+				theme.setAttribute('href', 'assets/css/style-light.css');
 				document.getElementById("theme-switch-icon").className = "fas fa-moon";
 			} else { 
-				theme.setAttribute('href', 'css/style.css');
+				theme.setAttribute('href', 'assets/css/style.css');
 				document.getElementById("theme-switch-icon").className = "fas fa-sun";
 			} 
 		} 
@@ -48,7 +48,7 @@
 				<!------->
 				<div class="project_photo">
 					<p class="project_photo_title">IoT-Based Outdoor Air Quality Monitoring System</p>
-					<div class="img-cover"><img id="project-1-img" src="/img/project-1.svg"></div>
+					<div class="img-cover"><img id="project-1-img" src="assets/img/project-1.svg"></div>
 				</div>
 				<div class="mobile-info-card">
 					Using a Raspberry Pi and low-cost environmental sensors, the system is built to collect outdoor air quality and send the data to the cloud.
@@ -62,7 +62,7 @@
 					<!--------->
 					<div class="project_photo">
 						<p class="project_photo_title">Smart Lamp Powered by Raspberry Pi</p>
-						<div class="img-cover"><img id="project-2-img" src="/img/project-3.png"></div>
+						<div class="img-cover"><img id="project-2-img" src="assets/img/project-3.png"></div>
 					</div>
 					<div class="mobile-info-card">
 						Using a Raspberry Pi, a temperature sensor, and the Google Assistant SDK, the system is able to function as a smart home assistant (and optionally control appliances).
@@ -76,7 +76,7 @@
 					<!--------->
 					<div class="project_photo">
 						<p class="project_photo_title">Voice-Controlled Home Automation</p>
-						<div class="img-cover"><img id="project-3-img" src="/img/project-4.png"></div>
+						<div class="img-cover"><img id="project-3-img" src="assets/img/project-4.png"></div>
 					</div>
 					<div class="mobile-info-card">
 						Using a Raspberry Pi, a temperature sensor, and the Amazon Alexa Voice Service, the system is able to function as a smart home device that is able to control appliances.
@@ -90,7 +90,7 @@
 					<!--------->
 					<div class="project_photo">
 						<p class="project_photo_title">RFID-Based Attendance Monitoring System</p>
-						<div class="img-cover"><img id="project-4-img" src="/img/project-2.png"></div>
+						<div class="img-cover"><img id="project-4-img" src="assets/img/project-2.png"></div>
 					</div>
 					<div class="mobile-info-card">
 						Using a Raspberry Pi, and a low-cost RFID scanner, the system is able to scan RFIDs and store information in a local MySQL server. A website is used to view information. <br>
@@ -105,7 +105,7 @@
 				<h1 class="inner_content_title">Get in touch</h1>
 				<p id="contact-info">I'm not currently looking for new opportunities but my inbox is still open.</p>
 				<div style="text-align: center;"><button class="contact-2" onclick="location.href='mailto:harold@pescuela.dev'" >Say hello <i class="fas fa-envelope"></i></button></div>
-				<a href="https://www.linkedin.com/in/haroldpescuela/"><div id="bottom"><img style="width:100px;vertical-align: middle;" src="/img/linkedin.png"/></div></a>
+				<a href="https://www.linkedin.com/in/haroldpescuela/"><div id="bottom"><img style="width:100px;vertical-align: middle;" src="assets/img/linkedin.png"/></div></a>
 
 			</div>
 		</div>
