--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Harold Pescuela</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta name="author" content="Harold Pescuela">
 	<link id="theme" rel="stylesheet" type="text/css" href="assets/css/style.css" /> 
 	<link rel="stylesheet" href="assets/css/animations.css"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.15.0/inter.min.css" integrity="sha512-LmuBiKMv0sdyc1LQk0LPrsjj3KSoVgVpAXUoFGY8Ye5Zi1mff0it3I42dkh3/NGQgtkqiHcdWOcHGUmOzYLETQ==" crossorigin="anonymous" />
@@ -26,6 +27,13 @@
 	</script>
 </head>
 <body>
+	<noscript>
+		<style type="text/css">
+			#theme-switch{
+				display: none;
+			}
+		</style>
+	</noscript>
 	<div id="theme-switch" onclick="toggleTheme()"><i id="theme-switch-icon" class="fas fa-sun"></i></div>
 	<div id="panel">
 		<p id="greet" class="line-1 anim-typewriter">Hello, world! I am </p>
