--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</noscript>
 	<div id="theme-switch" onclick="toggleTheme()"><i id="theme-switch-icon" class="fas fa-sun"></i></div>
 	<div id="panel">
-		<p id="greet" class="line-1 anim-typewriter">Hello, world! I am </p>
+		<div id="greet-wrap"><p id="greet" class="line-1 anim-typewriter">Hello, world! I am </p></div>
 		<p id="author_name">Harold Pescuela.</p>
 		<p id="course">Computer Engineer</p>
 		<p id="author_description">From programming to integrating it into hardware, I love the processes in between.</p>
