--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Harold Pescuela</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0">
 	<meta name="author" content="Harold Pescuela">
 	<link id="theme" rel="stylesheet" type="text/css" href="assets/css/style.css" /> 
 	<link rel="stylesheet" href="assets/css/animations.css"/>
@@ -70,7 +70,7 @@
 					<!--------->
 					<div class="project_photo">
 						<p class="project_photo_title">Smart Lamp Powered by Raspberry Pi</p>
-						<div class="img-cover"><img id="project-2-img" src="assets/img/project-3.png"></div>
+						<div class="img-cover"><img id="project-2-img" src="assets/img/project-2.svg"></div>
 					</div>
 					<div class="mobile-info-card">
 						Using a Raspberry Pi, a temperature sensor, and the Google Assistant SDK, the system is able to function as a smart home assistant (and optionally control appliances).
@@ -84,7 +84,7 @@
 					<!--------->
 					<div class="project_photo">
 						<p class="project_photo_title">Voice-Controlled Home Automation</p>
-						<div class="img-cover"><img id="project-3-img" src="assets/img/project-4.png"></div>
+						<div class="img-cover"><img id="project-3-img" src="assets/img/project-3.svg"></div>
 					</div>
 					<div class="mobile-info-card">
 						Using a Raspberry Pi, a temperature sensor, and the Amazon Alexa Voice Service, the system is able to function as a smart home device that is able to control appliances.
