--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<link rel="stylesheet" href="/assets/css/main.css">
 	<link rel="stylesheet" href="/assets/css/animations.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/roboto-mono-webfont@2.0.986/roboto-mono.min.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="/assets/css/roboto-mono.min.css">
+	<link rel="stylesheet" href="/assets/css/press-start.min.css">
 	<link rel="icon" type="image/png" href="/assets/img/pescuela-1.ico">
-	<script src="https://code.jquery.com/jquery-1.7.1.min.js" integrity="sha256-iBcUE/x23aI6syuqF7EeT/+JFBxjPs5zeFJEXxumwb0=" crossorigin="anonymous"></script>
+	<script src="/assets/js/jquery-1-7-1.min.js"></script>
 </head>
 <body>
 	<div id="noise"></div>
