--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <html>
-<title>Harolds Pescuela</title>
+<title>Harold Pescuela</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <body>
 under construction
-       
-       __
-  (___()'`;    woof !
-  /,    /`
-  \\"--\\
-
 </body>
 </html>
 <!-- 
