--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<header class="fade-in one">
 					<div class="left"><img src="images/me.jpg" alt="Me"></div>
 					<h1>Harold Pescuela</h1>
-					<div class="email"><a href="harold@pescuela.dev"><i class="fa fa-envelope-o"></i></a></div>
+					<div class="email"><a href="mailto:harold@pescuela.dev"><i class="fa fa-envelope-o"></i></a></div>
 				</header>
 				<!-- END HEADER /////////////////////////////////////////////////////////////////////////// -->
 				
