--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/font-awesome.min.css" />
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="images/favicon.png"> 
+	<link rel="shortcut icon" href="images/favicon.ico"> 
 </head>
 <body>
 	<div class="parent">
@@ -82,13 +82,4 @@
 		</div>
 	</div>
 </body>
- <!-- 
-       __
-  (___()'`;    woof !
-  /,    /`
-  \\"--\\
-
--->
-
 </html>
-
