--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- CONTENT SECTION /////////////////////////////////////////////////////////////////////////// -->
 				<section id="content" class="fade-in two">
 					<!-- About -->
-					<p>Hello! I'm a Philippine-based Oracle Cloud Application Developer.</p>
+					<p>Hello! I'm a Philippine-based Oracle Cloud Application developer.</p>
 					
 					<!-- Shots
 					<div class="shots">
