--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
         <title>Harold Pescuela</title>
+        <meta name="viewport" content="width=device-width; initial-scale=1.0;">
     </head>
     <body>
-        
+        hmmm
     </body>
 
 
