--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <html>
     <head>
-        <title>Harold Pescuela</title>
+        <title>Harold Pescuela ☁</title>
         <meta name="viewport" content="width=device-width; initial-scale=1.0;">
+        <link rel="stylesheet" href="css/style.css"/>
     </head>
     <body>
-        hmmm
+        <div class="topbar">
+
+        </div>
+
+
+
+
+
+
+
+        <div class="bottombar">
+            <p>&copy 2021 Harold Pescuela</p>
+            
+
+
+        </div>
+        
     </body>
 
 
