--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
     <head>
         <title>Harold Pescuela ☁</title>
         <meta name="viewport" content="width=device-width; initial-scale=1.0;">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+
         <link rel="stylesheet" href="css/style.css"/>
+
     </head>
     <body>
-        <div class="topbar">
-
+        <div class="topbar"></div>
+        <div class="panel-1">
+            
         </div>
 
 
