--- a/projects/index.html
+++ b/projects/index.html
@@ -7,32 +7,19 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 
-        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="/css/style.css"/>
 
     </head>
     <body>
        <div class="header">
            <span><a href="/">home</a></span>
            <span><a href="/posts">posts</a></span>
-           <span><a href="/projects">projects</a></span>
+           <span><a href="/projects" style="color: rgb(219, 69, 0)">projects</a></span>
            <span><a href="/contact">contact</a></span>
-        
-
        </div><hr>
        <div class="main">
-           <h1>Harold Pescuela</h1>
-           <span>Cloud Computing</span> &#183;
-           <span>SQL</span>
-           <div class="intro"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet viverra nisl. Fusce eleifend eros et tortor sodales aliquet eu id lacus. Donec blandit sit amet diam eget ornare. Fusce viverra nec lacus nec rhoncus. Sed venenatis dignissim ipsum, ut condimentum lectus varius eu. Etiam posuere est sit amet turpis bibendum, ac placerat justo posuere. </div>
-           <div class="social">Other places:
-            <span><a href="https://linkedin.com/in/haroldpescuela" target="_blank">LinkedIn</a></span> &#183;
-            <span><a href="https://twitter.com/roldpescuela" target="_blank">Twitter</a></span>
-               
-           </div>
-
-
-
-
+        <h2>2021</h2>
+        <ul>...</ul>
        </div>
         <div class="footer">
             <hr> 
