--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 
 
         <link rel="stylesheet" href="css/style.css"/>
@@ -21,10 +22,12 @@
        </div><hr>
        <div class="main">
            <h1>Harold Pescuela</h1>
-           <span>Cloud Computing</span> &#183;
-           <span>SQL</span>
+           <div class="skills">
+                <span>Cloud Computing</span> &#183;
+                <span>SQL</span>
+            </div>
            <div class="intro"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet viverra nisl. Fusce eleifend eros et tortor sodales aliquet eu id lacus. Donec blandit sit amet diam eget ornare. Fusce viverra nec lacus nec rhoncus. Sed venenatis dignissim ipsum, ut condimentum lectus varius eu. Etiam posuere est sit amet turpis bibendum, ac placerat justo posuere. </div>
-           <div class="social">Other places:
+           <div class="social">
             <span><a href="https://linkedin.com/in/haroldpescuela" target="_blank">LinkedIn</a></span> &#183;
             <span><a href="https://twitter.com/roldpescuela" target="_blank">Twitter</a></span>
                
@@ -37,7 +40,7 @@
         <div class="footer">
             <hr> 
             <p>&copy 2021 Harold Pescuela</p>
-            <p>Contents in this site are licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0 License</a>, unless otherwise stated</p>
+            <p style="color: darkgray">Contents in this site are licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0 License</a>, unless otherwise stated</p>
         </div>
     </body>
 
