--- a/projects/index.html
+++ b/projects/index.html
@@ -16,7 +16,7 @@
            <span><a href="/posts">posts</a></span>
            <span><a href="/projects" style="color: rgb(219, 69, 0)">projects</a></span>
            <span><a href="/contact">contact</a></span>
-       </div><hr>
+       </div>
        <div class="main">
         <h2>2021</h2>
         <ul>...</ul>
