--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <span><a href="/contact">contact</a></span>
         
 
-       </div><hr>
+       </div>
        <div class="main">
            <h1>Harold Pescuela</h1>
            <div class="skills">
