--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
        </div>
         <div class="footer">
            
-            <p>&copy 2021 Harold Pescuela</p>
-            <p style="color: darkgray">Contents in this site are licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0 License</a>, unless otherwise stated</p>
+            <p style="margin-bottom: 0;">&copy 2021 Harold Pescuela</p>
+            <p style="color: darkgray;margin-top: 0;">Contents in this site are licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0 License</a>, unless otherwise stated</p>
         </div>
     </body>
     
