--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="footer">
            
             <p style="margin-bottom: 0;">&copy 2021 Harold Pescuela</p>
-            <p style="color: darkgray;margin-top: 0;">Contents in this site are licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0 License</a>, unless otherwise stated</p>
+            <p style="color: darkgray;margin-top: 3px;">Contents in this site are licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0 License</a>, unless otherwise stated</p>
         </div>
     </body>
     
