--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
        <div class="main">
            <h1>Harold Pescuela</h1>
            <div class="skills">
-                <span>Cloud Computing</span> &#183;
-                <span>SQL</span>
+                <span>Cloud Computing</span> &#8226;
+                <span>SQL</span> &#8226;
+                <span>Python</span>
             </div>
            <div class="intro"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet viverra nisl. Fusce eleifend eros et tortor sodales aliquet eu id lacus. Donec blandit sit amet diam eget ornare. Fusce viverra nec lacus nec rhoncus. Sed venenatis dignissim ipsum, ut condimentum lectus varius eu. Etiam posuere est sit amet turpis bibendum, ac placerat justo posuere. </div>
            <div class="social">
@@ -62,7 +63,8 @@
                 </div>
                 <div id="view3">
                     <div class="image-cont">
-                    <img class="doc" src="/images/document.png">
+                    <h3>Get in touch</h3>
+                    <p><a href="mailto:harold@pescuela.dev">harold@pescuela.dev</a></p>
                     </div>
                 </div>
             </div>
