--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/style.css" /> 
         <link rel="stylesheet" href="css/tab.css"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/8b5497180a.js" crossorigin="anonymous"></script>
         <script src="tabs.js" type="text/javascript"></script>
         <script type="text/javascript">
             document.addEventListener("DOMContentLoaded", function(event) {
@@ -39,10 +41,6 @@
                 <span>Python</span>
             </div>
            <div class="intro"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet viverra nisl. Fusce eleifend eros et tortor sodales aliquet eu id lacus. Donec blandit sit amet diam eget ornare. Fusce viverra nec lacus nec rhoncus. Sed venenatis dignissim ipsum, ut condimentum lectus varius eu. Etiam posuere est sit amet turpis bibendum, ac placerat justo posuere. </div>
-           <div class="social">
-                <span><a href="https://linkedin.com/in/haroldpescuela" target="_blank">LinkedIn</a></span> &#183;
-                <span><a href="https://twitter.cosm/roldpescuela" target="_blank">Twitter</a></span>  
-           </div>
 
            <div style="width: 100%; margin: 0 auto; padding: 50px 0 40px;">
             <ul class="tabs" data-persist="true">
@@ -63,8 +61,10 @@
                 </div>
                 <div id="view3">
                     <div class="image-cont">
-                    <h3>Get in touch</h3>
-                    <p><a href="mailto:harold@pescuela.dev">harold@pescuela.dev</a></p>
+                    <h2>Get in touch</h2>
+                    <p class="links"><i class="fas fa-envelope"></i>  <a href="mailto:harold@pescuela.dev">harold@pescuela.dev</a></p>
+                    <p class="links"><i class="fab fa-linkedin"></i>  <a href="https://linkedin.com/in/haroldpescuela">LinkedIn</a></p>
+                    <p class="links"><i class="fab fa-twitter-square"></i>  <a href="https://twitter.cosm/roldpescuela">Twitter</a></p>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
         <div class="footer">
            
             <p style="margin-bottom: 0;">&copy 2021 Harold Pescuela</p>
-            <p style="color: darkgray;margin-top: 3px;">Contents in this site are licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0 License</a>, unless otherwise stated</p>
+            <p style="color: darkgray;margin-top: 3px;">Contents in this site are licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0 License</a>, unless otherwise stated.</p>
         </div>
     </body>
     
