--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-theme="light">
     <head>
-        <title>Harold Pescuela ☁</title>
+        <title>Harold Pescuela -- ☁</title>
         <meta name="viewport" content="width=device-width; initial-scale=1.0;">
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
