--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
        </div>
         <div class="footer">
             <span style="color: rgb(107, 107, 107)"><a href="https://github.com/pescuela" target="_blank">/Github</a></span>
+            <span style="color: rgb(107, 107, 107)"><a href="https://blog.pescuela.dev" target="_blank">/Blog</a></span>
             <p style="margin-bottom: 0;">&copy 2021 Harold Pescuela</p>
             <p style="color: darkgray;margin-top: 3px;">Contents in this site are licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0 License</a>, unless otherwise stated.</p>
         </div>
