--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <span>SQL</span> &#8226;
                 <span>Python</span>
             </div>
-           <div class="intro"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet viverra nisl. Fusce eleifend eros et tortor sodales aliquet eu id lacus. Donec blandit sit amet diam eget ornare. Fusce viverra nec lacus nec rhoncus. Sed venenatis dignissim ipsum, ut condimentum lectus varius eu. Etiam posuere est sit amet turpis bibendum, ac placerat justo posuere. </div>
+           <div class="intro"> ... </div>
         <img class="ld" id="theme-switcher" src="images/dark-mode.png"></img>
        </div>
         <div class="footer">
-            <span style="color: rgb(107, 107, 107)"><a href="https://github.com/pescuela" target="_blank">/Github</a></span>
+           
             <span style="color: rgb(107, 107, 107)"><a href="https://blog.pescuela.dev" target="_blank">/Blog</a></span>
             <p style="margin-bottom: 0;">&copy 2021 Harold Pescuela</p>
             <p style="color: darkgray;margin-top: 3px;">Contents in this site are licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0 License</a>, unless otherwise stated.</p>
