--- a/index.html
+++ b/index.html
@@ -33,14 +33,8 @@
     </head>
     <body>
        <div class="main">
-           <h1>Harold Pescuela</h1>
-           <div class="skills">
-                <span>Cloud Computing</span> &#8226;
-                <span>SQL</span> &#8226;
-                <span>Python</span>
-            </div>
-           <div class="intro"> ... </div>
-        <img class="ld" id="theme-switcher" src="images/dark-mode.png"></img>
+           <h1>nothing here</h1>
+           
        </div>
         <div class="footer">
            
